New commit (Development mode, testing out everything)

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,7 +1,8 @@
 PORT = 4000
-NODE_ENV = DEVELOPMENT
+NODE_ENV = PRODUCTION
 
 DB_LOCAL_URI = mongodb://localhost:27017/shopit
+DB_URI = mongodb+srv://beny_illyes:TestingshopIT@cluster0.t3sem.mongodb.net/shopit?retryWrites=true&w=majority
 
 JWT_SECRET = SDJFOW850FJSLDFJ4095809DFJG045FG
 JWT_EXPIRES_TIME = 7d
