package.json Modification

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon backend/server",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon backend/server",
     "seeder": "node backend/utils/seeder.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm run install-client && npm run build",
+    "install-client": "cd frontend && npm install",
+    "build": "cd frontend && npm run build"
   },
   "author": "Ghulam Abbas",
   "license": "ISC",
