--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "seeder": "node backend/utils/seeder.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "author": "Ghulam Abbas",
+  "author": "Illyes Benjamin",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
